--- a/Qwen3_0.ipynb
+++ b/Qwen3_0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOsy3AEl4hm7g1dC3kDXiKM",
+      "authorship_tag": "ABX9TyMgnisYTVd4nUL1f+Z666gg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,8 @@
       "outputs": [],
       "source": [
         "#step1\n",
-        "# pip install -r https://raw.githubusercontent.com/rasbt/LLMs-from-scratch/refs/heads/main/ch05/07_gpt_to_llama/requirements-extra.txt"
+        "# pip install -r https://raw.githubusercontent.com/rasbt/LLMs-from-scratch/refs/heads/main/ch05/07_gpt_to_llama/requirements-extra.txt\n",
+        "# code below used from https://github.com/rasbt/LLMs-from-scratch/blob/main/ch05/11_qwen3/standalone-qwen3.ipynb"
       ]
     },
     {
