--- a/Code_Generation_Fine_Tuning_LLama3_2.ipynb
+++ b/Code_Generation_Fine_Tuning_LLama3_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPCVEaBdMTzF8EmApzGrSeN",
+      "authorship_tag": "ABX9TyPdvw90Oeqcv8zWmOb8OHtk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
       "cell_type": "code",
       "source": [
         "from huggingface_hub import notebook_login\n",
-        "notebook_login(\"HF_TOKEN\")\n"
+        "notebook_login(\"HF_TOKEN\")"
       ],
       "metadata": {
         "id": "OzaWkMQVI9do"
