--- a/Load_pre_trained_weights_from_GPT_2.ipynb
+++ b/Load_pre_trained_weights_from_GPT_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPX5NoyNq59ZthK2nHdFGeL",
+      "authorship_tag": "ABX9TyNKAbMh2N+XBj7kJSks4HV6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FBh9ibLT8XEj"
       },
       "outputs": [],
       "source": [
+        "#loading and merging the weights of a particular LLM like Qwen . GPT -2 helps to improve same LLM and you can uses that for business purposes and also lot of experimentation can be done\n",
+        "\n",
         "!pip install tensorflow>=2.15.0 tqdm>=4.66"
       ]
     },
@@ -53,7 +55,7 @@
         "id": "1TANOG0w8pM6",
         "outputId": "e6471211-cfd1-4b2f-e13c-bb34c8a22bef"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +130,7 @@
       "metadata": {
         "id": "WGQ-13hOndxc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +180,7 @@
       "metadata": {
         "id": "MQa9AkCfGxta"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
