--- a/Load_pre_trained_weights_from_GPT_2.ipynb
+++ b/Load_pre_trained_weights_from_GPT_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKAbMh2N+XBj7kJSks4HV6",
+      "authorship_tag": "ABX9TyNQUHfF9O0MaJSoc0yk/Hhp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "#loading and merging the weights of a particular LLM like Qwen . GPT -2 helps to improve same LLM and you can uses that for business purposes and also lot of experimentation can be done\n",
+        "#loading and merging the weights of a particular LLM like Qwen . GPT -2 helps to improve same LLM and you can use that for business purposes and also lot of experimentation can be done\n",
         "\n",
         "!pip install tensorflow>=2.15.0 tqdm>=4.66"
       ]
