--- a/Code_Generation_Fine_Tuning_LLama3_2.ipynb
+++ b/Code_Generation_Fine_Tuning_LLama3_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPdvw90Oeqcv8zWmOb8OHtk",
+      "authorship_tag": "ABX9TyMcQ06o/fuLEjk3dSSzhv/W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,7 +354,10 @@
         "      top_logits, _ = torch.topk(logits,top_k) #pick top logits\n",
         "      min_val = top_logits[:,[-1]]\n",
         "      #make rest all logits to -inf as we don't need them\n",
+        "      #we can constraint the logits that we want to produce....\n",
+        "      #use case for constrainting the logits is - structuring the output , constrainting the tool/function list\n",
         "      logits = torch.where(logits < min_val, torch.tensor(float(\"-inf\"), device = model_device , dtype = model_dtype) , logits)\n",
+        "\n",
         "\n",
         "    #apply temperature and sample\n",
         "    if temperature > 0.0: # if temp is 1 keep logits as same . temp is way to magnify to pick high logits\n",
