--- a/Agent_LangGraph.ipynb
+++ b/Agent_LangGraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNsycDtyDQ7j44afbJvLRA",
+      "authorship_tag": "ABX9TyPfVh7XPgESh6veLMhq83TR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/goelnikhils-lgtm/languagemodels/blob/main/workflows_agent_scratch_LangGraph.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/goelnikhils-lgtm/languagemodels/blob/main/Agent_LangGraph.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,6 +35,7 @@
       "outputs": [],
       "source": [
         "#building agents from scratch .by god's grace. Jai Shri Ram . Jai Bajrangbali\n",
+        "#building agents using MCP Protcol\n",
         "#https://www.youtube.com/watch?v=aHCDrAbH_go&t=120s - LangGraph\n",
         "!pip install langchain_core langchain-anthropic langgraph"
       ]
