--- a/Finetuning_using_Unsloth_LLM.ipynb
+++ b/Finetuning_using_Unsloth_LLM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN9eocECSbsaaQs6F2bnQXz",
+      "authorship_tag": "ABX9TyNrvSnFI869OcNmgtO3S+NQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,7 +318,7 @@
         "\n",
         "#dataset\n",
         "q_column =\"question\"\n",
-        "c_coumn = \"evaluation_criteria\"\n",
+        "c_column = \"evaluation_criteria\"\n",
         "a_column = \"answer\""
       ],
       "metadata": {
