--- a/DynamicFunctionCalling_AGENT_MCP_.ipynb
+++ b/DynamicFunctionCalling_AGENT_MCP_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4wA5D71EdCGOVF+AL9+/l",
+      "authorship_tag": "ABX9TyP4rmgWGBFD1YAi8kGjyzyJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,6 @@
         "!pip install tiktoken\n",
         "!pip install faiss-cpu\n",
         "!pip install openai\n",
-        "!pip install pypdf\n",
         "!pip install pypdf2\n",
         "!pip install langgraph\n",
         "\n",
@@ -105,7 +104,7 @@
         "class EmbeddingAgent():\n",
         "  def __init__(self,dim=1536):\n",
         "    self.dim = dim\n",
-        "    self.index = faiss.IndexFlatL2(self.dim)\n",
+        "    self.index = faiss.IndexFlatL2(self.dim) #using inverted flat file based index ....\n",
         "  def embed(self,texts:List[str]) ->List[List[float]]:\n",
         "    response = openai.Embedding.create(input=texts,model=EMBED_MODEL)\n",
         "    return [item.embedding for item in response.data]\n",
