Modified some comments

--- a/Qwen3_0.ipynb
+++ b/Qwen3_0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMgnisYTVd4nUL1f+Z666gg",
+      "authorship_tag": "ABX9TyOwfFQRtPTpUGvV5vEZr+kA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,24 +54,10 @@
         "  print(f\"{p} version:{version(p)}\")"
       ],
       "metadata": {
-        "id": "Dok_ghs0KPlS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8e228336-2a45-48fe-8bdd-6396d3413b3b"
+        "id": "Dok_ghs0KPlS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "huggingface_hub version:0.34.4\n",
-            "tokenizers version:0.22.0\n",
-            "torch version:2.8.0+cu126\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -140,7 +126,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#rope - rotatory position embeddings - rope captures relatve position information information\n",
+        "#rope - rotatory position embeddings - rope captures relatve position information\n",
         "#use position interpolation increase the inference context length .... use a scaling factor\n",
         "#NTK - adaptive frequency scaling method - use 1 as scaling factor for high frequency tokens , use 1/n as the factor for low frequency tokens\n",
         "#YARN - adaptive frequency scaling method -\n",
