--- a/Multiheadlatentattention.ipynb
+++ b/Multiheadlatentattention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+aql9utirdou13fEgX7Pr",
+      "authorship_tag": "ABX9TyMcfOzziv5d8RCnh6NJEgtR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "gZeKaZ1oQnJE"
       },
@@ -81,7 +81,7 @@
         "      attn_scores = torch.zeros(B,self.n_heads,S,S_full,device=x.device) #(B,S,n_heads,dh)\n",
         "      for h in range(self.n_heads): # attention heads\n",
         "        tmp = torch.matmul(q[:,:,h],self.absorbed_k[h])\n",
-        "        attn_scores[:,h] = torch.bmm(tmp,c_kv.transpose(1,2))\n",
+        "        attn_scores[:,h] = torch.bmm(tmp,c_kv.transpose(1,2)) #batch matrix multiplication\n",
         "\n",
         "      #Scale and apply causal mask\n",
         "      attn_scores = attn_scores / (self.dh**0.5)\n",
@@ -121,10 +121,24 @@
         "  demo()\n"
       ],
       "metadata": {
-        "id": "gL0fqHQvf1-y"
+        "id": "gL0fqHQvf1-y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2d22f6b-abf9-464d-b879-a83fbefb34e6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Output shape: torch.Size([1, 5, 512])\n",
+            "Cache shape: torch.Size([1, 5, 256])\n",
+            "Memory: Standard = 80.0KB , Latent = 20.0KB , Reduction = 4.0x\n"
+          ]
+        }
+      ]
     }
   ]
 }
