--- a/Multiheadlatentattention.ipynb
+++ b/Multiheadlatentattention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcfOzziv5d8RCnh6NJEgtR",
+      "authorship_tag": "ABX9TyP522Z6jGO5rbfCAReMhINL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "  def __init__(self,d_model,n_heads,kv_latent_dim):\n",
         "    super().__init__()\n",
         "    self.d_model = d_model #input embedding dimension\n",
-        "    self.n_heads = n_heads #no of attention heads\n",
+        "    self.n_heads = n_heads #no of attention heads means no of query heads !!\n",
         "    self.dh = d_model // n_heads #dimension per head\n",
         "\n",
         "    #Projection layers\n",
@@ -74,7 +74,7 @@
         "      v_full = self.W_uv(c_kv) #(B,S_full,D)\n",
         "      v = v_full.view(B,S_full,self.n_heads,self.dh).transpose(1,2) #(B,S_full,n_heads,dh)\n",
         "\n",
-        "      #Use input X directly (since W_q is absorbed)\n",
+        "      #Use input \"x\" directly (since W_q is absorbed)\n",
         "      q = x.view(B,S, self.n_heads, self.dh) #(B,n_heads,S,dh)\n",
         "\n",
         "      #Compute attention scores\n",
