Modified some comments

--- a/Qwen3_0.ipynb
+++ b/Qwen3_0.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyOwfFQRtPTpUGvV5vEZr+kA",
+      "authorship_tag": "ABX9TyMwLJJr4ulecjg0gBuIK5Qv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -132,6 +130,8 @@
         "#YARN - adaptive frequency scaling method -\n",
         "#adaptive frequency method increases the context length of inference window of transformer , even when transformer is trained at lower context length\n",
         "#NTK helps with 64K context lenght and also helps in find needle in haystack evaluation for LLM\n",
+        "#element wise multiplication - result into a vector or tensor of same dimension\n",
+        "#dot product is normal matrix multiplication -> Attention uses a scaled dot product multiplication ....\n",
         "\n",
         "def compute_rope_params(head_dim,theta_base = 10_000,context_length = 4096, dtype= torch.float32):\n",
         "  assert head_dim % 2 == 0, \"Embedding dimnesion must be even\"\n",
@@ -180,6 +180,30 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import numpy\n",
+        "import numpy as np\n",
+        "\n",
+        "# Creating a numpy array\n",
+        "arr = np.array([[[0,1,2],[3,0,5]] ,[[6,7,8],[9,10,11]]]) # 2X3 dim array\n",
+        "\n",
+        "# Display original array\n",
+        "print(\"Original Array:\\n\",arr,\"\\n\")\n",
+        "\n",
+        "# indexing using None\n",
+        "res = arr[:,None] #\n",
+        "\n",
+        "# Display result\n",
+        "print(\"Result of indexing using None:\\n\",res,\"\\n\")\n"
+      ],
+      "metadata": {
+        "id": "wZIIB34bqucW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#GQA\n",
         "class GroupedQueryAttention(nn.Module):\n",
         "  def __init__(\n",
@@ -198,14 +222,14 @@
         "      head_dim = d_in // num_heads\n",
         "\n",
         "    self.head_dim = head_dim\n",
-        "    self.d_out = num_heads*head_dim\n",
+        "    self.d_out = num_heads*head_dim # out dimensions from attention - output dimensions of the context vector produced by attention\n",
         "\n",
         "    self.W_query = nn.Linear(d_in, self.d_out, bias = False, dtype = dtype)\n",
         "    self.W_key = nn.Linear(d_in, num_kv_groups*head_dim, bias = False, dtype = dtype)\n",
         "    self.W_value = nn.Linear(d_in, num_kv_groups*head_dim, bias = False, dtype = dtype)\n",
         "\n",
         "    self.out_proj = nn.Linear(self.d_out, d_in, bias = False, dtype = dtype) #o_proj -> output projection in case of MHA\n",
-        "    if qk_norm:\n",
+        "    if qk_norm: # normalization of q and k for training stability of LLM\n",
         "      self.q_norm = RMSNorm(head_dim, eps = 1e-6)\n",
         "      self.k_norm = RMSNorm(head_dim, eps = 1e-6)\n",
         "    else:\n",
@@ -236,7 +260,7 @@
         "    queries = apply_rope(queries,cos,sin)\n",
         "    keys = apply_rope(keys,cos,sin)\n",
         "\n",
-        "    #Expand K and V to match query\n",
+        "    #Expand K and V to match query - use interleave function to expand the tensor on dimension 1 so that it can match query dimensions\n",
         "    keys = keys.repeat_interleave(self.group_size,dim = 1)\n",
         "    values = values.repeat_interleave(self.group_size,dim = 1)\n",
         "\n",
@@ -458,48 +482,10 @@
         "model"
       ],
       "metadata": {
-        "id": "4mU_2bITDqsP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f51957e0-24c6-426c-d8aa-5fd6f1937222"
+        "id": "4mU_2bITDqsP"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Qwen3Model(\n",
-              "  (tok_emb): Embedding(151936, 1024)\n",
-              "  (trf_blocks): ModuleList(\n",
-              "    (0-27): 28 x TransformerBlock(\n",
-              "      (att): GroupedQueryAttention(\n",
-              "        (W_query): Linear(in_features=1024, out_features=2048, bias=False)\n",
-              "        (W_key): Linear(in_features=1024, out_features=1024, bias=False)\n",
-              "        (W_value): Linear(in_features=1024, out_features=1024, bias=False)\n",
-              "        (out_proj): Linear(in_features=2048, out_features=1024, bias=False)\n",
-              "        (q_norm): RMSNorm()\n",
-              "        (k_norm): RMSNorm()\n",
-              "      )\n",
-              "      (ff): FeedForward(\n",
-              "        (fc1): Linear(in_features=1024, out_features=3072, bias=False)\n",
-              "        (fc2): Linear(in_features=1024, out_features=3072, bias=False)\n",
-              "        (fc3): Linear(in_features=3072, out_features=1024, bias=False)\n",
-              "      )\n",
-              "      (norm1): RMSNorm()\n",
-              "      (norm2): RMSNorm()\n",
-              "    )\n",
-              "  )\n",
-              "  (final_norm): RMSNorm()\n",
-              "  (out_head): Linear(in_features=1024, out_features=151936, bias=False)\n",
-              ")"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -507,28 +493,10 @@
         "model(torch.tensor([1,2,3]).unsqueeze(0))"
       ],
       "metadata": {
-        "id": "HS9Dmo6Y_Rhi",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8ce121ce-36b6-4eda-82f4-137837fc2ed1"
+        "id": "HS9Dmo6Y_Rhi"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[nan, nan, nan,  ..., nan, nan, nan],\n",
-              "         [nan, nan, nan,  ..., nan, nan, nan],\n",
-              "         [nan, nan, nan,  ..., nan, nan, nan]]], dtype=torch.bfloat16,\n",
-              "       grad_fn=<UnsafeViewBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -709,29 +677,10 @@
         "del weight_dic"
       ],
       "metadata": {
-        "id": "OeW_Pe1_-b8c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
-        },
-        "outputId": "e29d4a3e-885a-47b0-f3a1-9a46ebb9764e"
+        "id": "OeW_Pe1_-b8c"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "Shape mismatch in tensor 'model.layers.27.mlp.down_proj.weight'.Left :torch.Size([3072, 1024]),Right :torch.Size([1024, 3072])",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-272792570.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mweight_dic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshard\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m#print(\"weight_dic\",weight_dic)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mload_weights_into_qwen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mQWEN3_CONFIG\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mweight_dic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mweight_dic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-315811854.py\u001b[0m in \u001b[0;36mload_weights_into_qwen\u001b[0;34m(model, param_config, params)\u001b[0m\n\u001b[1;32m     29\u001b[0m   \u001b[0;31m#feed forward weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m   \u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mf\"model.layers.{l}.mlp.gate_proj.weight\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"model.layers.{l}.mlp.gate_proj.weight\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m   \u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mf\"model.layers.{l}.mlp.down_proj.weight\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"model.layers.{l}.mlp.down_proj.weight\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m   \u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mf\"model.layers.{l}.mlp.up_proj.weight\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"model.layers.{l}.mlp.up_proj.weight\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-315811854.py\u001b[0m in \u001b[0;36massign\u001b[0;34m(left, right, tensor_name)\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtensor_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"unknown\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Shape mismatch in tensor '{tensor_name}'.Left :{left.shape},Right :{right.shape}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mParameter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtok_emb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0massign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtok_emb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"model.embed_tokens.weight\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"model.embed_tokens.weight\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Shape mismatch in tensor 'model.layers.27.mlp.down_proj.weight'.Left :torch.Size([3072, 1024]),Right :torch.Size([1024, 3072])"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
