--- a/Memory_Agent_Leveraging_MongoDB.ipynb
+++ b/Memory_Agent_Leveraging_MongoDB.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONYFX1R7DNa8ZeHiX6skWN",
+      "authorship_tag": "ABX9TyNdOqUpl6hG8Eyjnw+LptAK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "#code for connecting to MongoDB running on cloud\n",
         "from pymongo.mongo_client import MongoClient\n",
         "from pymongo.server_api import ServerApi\n",
-        "uri = \"mongodb+srv://goelnikhils_db_user:XLRI@nikhil.a8je1te.mongodb.net/?retryWrites=true&w=majority&appName=Nikhil\" # Replace <XLRI123> with your actual password\n",
+        "uri = \"\" #\n",
         "# Create a new client and connect to the server\n",
         "client = MongoClient(uri, server_api=ServerApi('1'))\n",
         "# Send a ping to confirm a successful connection\n",
